# ao3-rs

./: Cargo.toml  TODO
src/: enums.rs  lib.rs  structs.rs
src/models/: language.rs  mod.rs  work.rs
src/models/search/: mod.rs  search_url.txt  url_rep.rs
src/scrape/: mod.rs  search.rs  work.rs
