[package]
name = "ao3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = { version = "0.11.6", features = ["blocking"] }
chrono = "0.4.19"
typed-builder = "0.10.0"
strum = { version = "0.24", features = ["derive"], optional = true }

[features]
strum = ["dep:strum"]
